src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/ServiceOverrides/ServiceOverrides.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.service-overrides-container {
  width: 1024px;
  margin-left: var(--spacing-medium);

  & :global(.TextInput--main) {
    width: 100%;
  }
}

.dialogStyles {
  min-width: 600px;
  width: auto;
  .service-override-dialog {
    min-height: 450px;
  }
}

.table-row {
  display: grid;
  grid-template-columns: 2fr 1fr 3fr minmax(10px, 1fr);
  column-gap: var(--spacing-8);
  align-items: baseline;
  &.row-value {
    padding-top: var(--spacing-medium);
    padding-bottom: var(--spacing-medium);
    border-bottom: solid 1px var(--grey-100);
    font-size: medium;
  }

  & :global(.bp3-form-group) {
    margin: 0;
  }

  .variableListButtons {
    justify-content: flex-end !important;
  }

  .value-string {
    display: flex;
    align-items: center;
    justify-content: flex-start;
  }

  .value-column {
    display: grid;
    grid-template-columns: 1fr 90px;
  }

  .actionButtons {
    display: flex;
    justify-content: flex-end;
    column-gap: var(--spacing-xsmall);
  }

  &:last-of-type,
  &.header-row {
    padding-bottom: var(--spacing-medium);
    border-bottom: 1px solid var(--grey-100);
  }

  &.header-row {
    font-style: normal;
    font-weight: 600;
    font-size: var(--font-size-xsmall);
    letter-spacing: 0.2px;
    color: var(--grey-600);
    text-transform: uppercase;
  }
}

.tooltip {
  display: block;
  padding: var(--spacing-small);
}
.addOverrideBtn {
  padding: 0 !important;
  justify-content: flex-start;
}

.overridesAccordionPanel {
  padding: 0 !important;
}

.overridesAccordionDetails {
  padding-bottom: 0 !important;
}
.variableListMenu {
  :global(.bp3-menu) {
    max-height: 214px !important;
  }
}

